<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sc"
    tools:context=".SavedCalculations">

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalanualfee"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/cardColor"
        tools:layout_editor_absoluteX="223dp"
        tools:layout_editor_absoluteY="136dp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/cardColor"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="136dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/buttonok"
        android:text="@string/home"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="505dp" />

</androidx.constraintlayout.widget.ConstraintLayout>